# satsub-simd

./: .clang-format  .travis.yml  CMakeLists.txt  bench.cpp  cpucheck.cpp  satsub.cpp  satsub.hpp  test.cpp
